202-css/custom.css
body{
	background-color: #f6f7f7;
  line-height: 1;
}

select.input-sm {
  line-height: 1;
}

.container{
  max-width: none !important;
  min-width: 1450;
  width: 1450px;
}

.navbar-default{
  background-color: #267da8;
  min-height: 44px;
  margin-top: 6px;
}

.navbar-default .navbar-nav > li > a {
  color: #fff;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
  color: #D7E9F1;
}

.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
  color: #D7E9F1;
}

.navbar-nav.navbar-right:last-child {
margin-right: 0px;
}

.navbar-nav > li > a {
  font-size: 14px;
  padding: 10px 15px;
  line-height: 24px;
}

.icon-navbar{
  margin-left: 5px;
}

.navbar-default .navbar-nav > .dropdown > a .caret {
  border-top-color: #fff;
  border-bottom-color: #fff;
  margin-left: 5px;
}

.navbar-default .navbar-nav > .dropdown > a:hover .caret, .navbar-default .navbar-nav > .dropdown > a:focus .caret {
  border-top-color: #D7E9F1;
  border-bottom-color: #D7E9F1;
}

.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
  color: #fff;
}

.navbar-default .dropdown-menu {
  background-color: #267da8;
}

.navbar-default .dropdown-arrow{
  border-color: transparent transparent #267da8 transparent;
}

.navbar-default .dropdown-menu li > a {
  color: rgba(169, 208, 208, 0.75);
}

.navbar-default .dropdown-menu li > a:hover, .dropdown-menu li > a:active, .dropdown-menu li > a:focus {
  background: #267da8;
  color: #fff;
}

.navbar-default .dropdown-menu li.active > a{
  background: #267da8;
  color: #ffffff;
}

.navbar-default .dropdown-menu li.active > a:hover{
  background: #267da8;
  color: #ffffff;
}

#second-nav{
  margin-bottom: -7px;
  border: none;
}

.nav-tabs > li {
  margin-bottom: 0px;
}
.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
  background-color: white;
}

#second-nav > li.active > a{
  border-color: #EBEBEB;
  color: #267da8;
  border-bottom: none;  
}

#second-nav > li > a:hover, #second-nav > li > a:focus{
  color: #267da8;
}

#sub-menu .breadcrumb{
  font-size: 12px;
  border: 2px solid #EBEBEB;
}

#sub-menu .breadcrumb > li:after{
  content: none;
}

#sub-menu .breadcrumb > li{
  margin-right: 15px;
}

#sub-menu .breadcrumb > li a{
  color: #7f8c9a;
}

#sub-menu .breadcrumb > li.active > a{
  color: #267da8;
  cursor: pointer;
}


small, .small {
  line-height: 1;
}

.main_wrapper{
  margin: 25px 0px;
}

.main_wrapper .main{
  margin: 5px auto;
}

.infotext{
  font-size:12px;
}

.advertise-top-left{
  height: 60px;
}

.main{
  margin: 140px auto;
  float: none;
  background-color: white;
  border: 2px solid #EBEBEB;
  height: 100%;
  padding: 20px;
  -webkit-appearance: none;
  border-radius: 6px;
  -webkit-box-shadow: none;
  box-shadow: none;
  -webkit-transition: border .25s linear, color .25s linear, background-color .25s linear;
  transition: border .25s linear, color .25s linear, background-color .25s linear;
}

.install{
  margin: 40px auto;
}

.form-group.focus .form-control, .form-control:focus {
	border-color: #267da8;
}

.btn-p202 {
  color: #ffffff;
  background-color: #1d950c;
}

.btn-p202:hover, .btn-p202.hover, .btn-p202:focus{
  background-color: #2CAA1A;
}

.form-signin {
  padding: 10px 20px;
  margin: 0 auto;
}

.form-signin .form-group{
  margin-bottom: 0px;
}

.form-signin .form-control {
  position: relative;
  font-size: 16px;
  height: auto;
  padding: 10px;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}
.form-signin .form-control:focus {
  z-index: 2;
}
.form-signin .first {
  margin-bottom: -2px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
.form-signin .middle {
  margin-bottom: -2px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.form-signin .middle {
   border-radius: 0;
}

.form-signin .last {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-top: 0;
}

.form-signin .forgot-text {
  font-size: 10px;
  line-height: 2.5;
}

.form-signin .login_tooltip{
  top: 16px;
  right: -195px;
  display: block;
}

.install_logs{
  font-size: 12px;
}

.footer{
  text-align: center;
  font-size: 11px;
}

.advertise{
  padding: 22px 0px;
  width: 100%;
}

.home-icons{
  font-size: 15px;
}

.h6-home{
  border-bottom: 1px solid;
  border-bottom-color: #E2E2E2;
}

.home .meetup-links{
  font-size: 10px;
  position: absolute;
  margin: 8px 6px 0px 6px;
}

.home .apps img{
  width: 42px;
}

.home .apps a{
  font-size: 14px;
}

.home .apps span{
  font-size: 12px;
}

.home .apps .app-row{
  margin-top: 10px;
}

#tracking202_tweets{
  font-size: 14px;
}

#tracking202_tweets span{
  margin-right: 5px;
  font-size: 12px;
}

#tracking202_posts{
  font-size: 14px;
}

#tracking202_posts i{
  margin-right: 5px;
  font-size: 12px;
}


#tracking202_sponsors a{
  font-size: 14px;
}

#tracking202_sponsors span{
  font-size: 12px;
}

.home .resources{
  font-size: 15px;
}

.home .resources table{
  width: 100%;
}

.home .resources h2{
  font-size: 24px;
}

.home .resources h3{
  font-size: 20px;
}

.home .resources img{
  max-width: 125px;
}

.account_left{
  background-color: #eee;
  font-size: 14px;
}

.success{
  background-color: #fff;
  color: #1d950c;
}

.error{
  background-color: #fff;
  color: #e74c3c;
}

.account label{
  line-height: 1.6;
}

.row select{
  line-height: 1.462;
}

.form_seperator {
  padding-left: 15px; 
  padding-right: 15px;
}

.form_seperator .col-xs-12{
  border-bottom: 2px dotted #eee;
}

#system-prefs p{
  margin: 0px;
  font-size: 14px;
  border-bottom: 1px dotted #D5D5D5;
}

.panel .panel-heading {
  font-size: 14px;
  font-weight: bold;
  color: #34495e;
}

.panel .panel-body{
  line-height: 1.3;
}
/* ... */

